# SeekingContext

./: .mcp.json  =6.0  README.md  README_CN.md  pyproject.toml
claude-plugin/: AGENTS.md  README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: common.sh  hooks.json  session-start.sh  stop.sh  user-prompt-submit.sh
claude-plugin/skills/memory-recall/: SKILL.md
claude-plugin/skills/memory-store/: SKILL.md
openclaw-plugin/: README.md  backend.ts  index.ts  openclaw.plugin.json  package.json  tsconfig.json
src/seeking_context/: __init__.py  api.py  api_models.py  cli.py  client.py  config.py  identity.py  server.py
src/seeking_context/context/: __init__.py  levels.py
src/seeking_context/models/: __init__.py  memory.py  scope.py  search.py
src/seeking_context/prompts/: __init__.py  memory_prompts.py
src/seeking_context/resources/: __init__.py  memory_resources.py
src/seeking_context/search/: __init__.py  hybrid.py  mmr.py  temporal_decay.py
src/seeking_context/storage/: __init__.py  base.py  chromadb_store.py  markdown_store.py  memory_store.py  sqlite_store.py
src/seeking_context/tools/: context_tools.py  memory_tools.py  session_tools.py
tests/: __init__.py  conftest.py  test_api.py  test_identity.py  test_integration.py  test_markdown_store.py  test_models.py  test_search.py  test_storage.py  test_tools.py
